singletons-base/tests/compile-and-dump/Singletons/BadEnumDeriving.golden

Singletons/BadEnumDeriving.hs:0:0: error:
    Can't derive Enum instance for Foo_0 a_1.
  |
5 | $(singletons [d|
  |  ^^^^^^^^^^^^^^^...
